# wc2026-ml-predictor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  WC2026_ML.html  WC2026_ML.ipynb  pyproject.toml
models/: dc_params.json  elo_ratings.json  lgb_raw.pkl  lr_calibrated.pkl  meta_learner_balanced.pkl  model_metadata.json  scaler.pkl  xgb_raw.pkl
