[project]
name = "paso5"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=1.26.0",
    "oracledb>=3.4.2",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.10.0",
    "seaborn>=0.13.0",
    "shap>=0.44.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
]
